# Pcap_DNSProxy

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  README.zh-Hans.md  README.zh-Hant.md
.github/: ISSUE_TEMPLATE.md
Document/: ChangeLog(Chinese-Simplified).txt  ChangeLog(Chinese_Simplified).txt  ChangeLog(Chinese_Traditional).txt  FAQ(Chinese-Simplified).txt  FAQ(Chinese_Simplified).txt  FAQ(Chinese_Traditional).txt  FAQ_Linux(Chinese-Simplified).txt  FAQ_Linux(Chinese_Simplified).txt  FAQ_Mac(Chinese-Simplified).txt  GNU-GPL-v2.0.txt  ReadMe(Chinese-Simplified).txt  ReadMe(Chinese_Traditional).txt  ReadMe.txt  ReadMe_Linux(Chinese-Simplified).txt  ReadMe_Mac(Chinese-Simplified).txt  ReadMe_Mac(Chinese_Simplified).txt  Source-License.txt
Documents/: ChangeLog(Chinese_Simplified).txt  ChangeLog(Chinese_Traditional).txt  Changelog(zh_Hans).txt  Changelog(zh_Hant).txt  Changelog.en.txt  Changelog.zh-Hans.txt  Changelog.zh-Hant.txt  FAQ(Chinese_Simplified).txt  FAQ(Chinese_Traditional).txt  FAQ(zh_Hans).txt  FAQ(zh_Hant).txt  FAQ.en.txt  FAQ.zh-Hans.txt  FAQ.zh-Hant.txt  FAQ_Linux(zh_Hant).txt  FAQ_Linux_Mac(zh_Hans).txt  FAQ_Linux_Mac(zh_Hant).txt  FAQ_Linux_macOS.en.txt  FAQ_Linux_macOS.zh-Hans.txt  FAQ_Linux_macOS.zh-Hant.txt  FAQ_Mac(Chinese_Simplified).txt  FAQ_Mac(zh_Hans).txt  FAQ_Windows.en.txt  FAQ_Windows.zh-Hans.txt  FAQ_Windows.zh-Hant.txt  GNU_GPL_v2.0.txt  README.en.md  README.md  README.zh-Hant.md  ReadMe(Chinese_Simplified).txt  ReadMe(Chinese_Traditional).txt  ReadMe(zh_Hans).txt  ReadMe(zh_Hant).txt  ReadMe.en.md  ReadMe.en.txt  ReadMe.zh-Hans.md  ReadMe.zh-Hans.txt  ReadMe.zh-Hant.txt  ReadMe_Linux(zh_Hans).txt  ReadMe_Linux(zh_Hant).txt  (+14 more)
Homebrew/: PCap_dnsproxy.rb  homebrew.readme.txt
Pcap_DNSProxy/: CMakeLists.txt  Pcap_DNSProxy.sln
Pcap_DNSProxy/Documents/: ReadMe.en.md  ReadMe.zh-Hant.md
Pcap_DNSProxy/Pcap_DNSProxy/: CMakeLists.txt  Pcap_DNSProxy.rc  Pcap_DNSProxy.vcxproj  Pcap_DNSProxy.vcxproj.filters  resource.h
Pcap_DNSProxy/Pcap_DNSProxy.xcodeproj/: project.pbxproj
Pcap_DNSProxy/Pcap_DNSProxy/Include/: Class.h  Constructor.h  Definition.h  Destructor.h  Include.h  Monitor.h  Platform.h  ReadCommand.h  ReadConfiguration.h  Service.h  Structure.h  Template.h  Type.h
Pcap_DNSProxy/Pcap_DNSProxy/Source/: Buffer.cpp  Constructor.cpp  Destructor.cpp  Environment.cpp  File.cpp  Monitor.cpp  Network.cpp  Pcap_DNSProxy.cpp  PrintLog.cpp  ReadCommand.cpp  ReadConfiguration.cpp  ReadSupport.cpp  Service.cpp  Text.cpp
Source/: Build_Linux.Debian.sh  Build_Linux.SysV.sh  Build_Linux.Systemd.sh  Build_Linux.sh  Build_Mac.sh  Pcap_DNSProxy.sln
Source/Example/: Config.ini  ServiceControl.bat
Source/ExampleConfig/: Config.ini  Hosts.ini  IPFilter.ini  PcapDNSProxyService  PcapDNSProxyService.plist  Pcap_DNSProxy.service  Routing.txt  ServiceControl.bat  WhiteList.txt  White_List.txt  pcap_dnsproxy.service.plist
Source/FileHash/: Base.cpp  CMakeLists.txt  CRC.cpp  CRC.h  Checksum.cpp  FileHash.cpp  FileHash.h  FileHash.rc  FileHash.vcxproj  FileHash.vcxproj.filters  MD2.cpp  MD2.h  MD4.cpp  MD4.h  MD5.cpp  MD5.h  SHA-1.cpp  SHA-1.h  SHA-2.cpp  SHA-2.h  SHA-3.cpp  SHA-3.h  resource.h
Source/FileHash.xcodeproj/: project.pbxproj
Source/FileHash/SHA3/: CMakeLists.txt  KeccakF-1600-compact64.cpp  KeccakF-1600-interface.h  KeccakHash.cpp  KeccakHash.h  KeccakSponge.cpp  KeccakSponge.h  SnP-FBWL-default.cpp  SnP-FBWL-default.h  SnP-Relaned.h  SnP-interface.h  SnP.h  brg_endian.h
Source/KeyPairGenerator/: CMakeLists.txt  KeyPairGenerator.cpp  KeyPairGenerator.h  KeyPairGenerator.rc  KeyPairGenerator.vcxproj  KeyPairGenerator.vcxproj.filters  resource.h
Source/KeyPairGenerator.xcodeproj/: project.pbxproj
Source/LibSodium/: LibSodium_x64.lib  LibSodium_x86.lib  crypto_aead_chacha20poly1305.h  crypto_auth_hmacsha512.h  crypto_core_salsa2012.h  crypto_core_salsa208.h  crypto_generichash_blake2b.h  crypto_hash.h  crypto_hash_sha512.h  crypto_int32.h  crypto_int64.h  crypto_onetimeauth_poly1305.h  crypto_secretbox.h  crypto_shorthash.h  crypto_shorthash_siphash24.h  crypto_sign.h  crypto_stream.h  crypto_stream_aes128ctr.h  crypto_stream_salsa20.h  crypto_uint16.h  crypto_uint32.h  crypto_verify_16.h  crypto_verify_32.h  export.h  randombytes_sysrandom.h  runtime.h  sodium.h  version.h  version.h.in
Source/Linux/: Capture.cc  ClassInitialization.cc  Configuration.cc  Main.cc  Makefile  Monitor.cc  Pcap_DNSProxy.h  Pcap_DNSProxy_Base.h  PrintError.cc  Process.cc  Protocol.cc  Request.cc
Source/Mac/: Capture.cpp  ClassInitialization.cpp  Configuration.cpp  Main.cpp  Monitor.cpp  Pcap_DNSProxy.h  Pcap_DNSProxy_Base.h  PrintError.cpp  Process.cpp  Protocol.cpp  Request.cpp
Source/Main/: Capture.cpp  ClassInitialization.cpp  Configuration.cpp  Console.cpp  DNSCurve.cpp  KeyPairGenerator.cpp  KeyPairGenerator.h  Main.cpp  Monitor.cpp  Pcap_DNSProxy.h  Pcap_DNSProxy.rc  Pcap_DNSProxy.sln  Pcap_DNSProxy.vcxproj  Pcap_DNSProxy.vcxproj.filters  Pcap_DNSProxy_Base.h  PrintError.cpp  Process.cpp  Protocol.cpp  Request.cpp  Service.cpp  resource.h
Source/Pcap_DNSProxy/: Base.cpp  Base.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Capture.cpp  Capture.h  Class.h  Configuration.cpp  Configuration.h  Constructor.cpp  DNSCurve.cpp  DNSCurve.h  DNSCurveControl.cpp  DNSCurveControl.h  DNSCurveRequest.cpp  DNSCurveRequest.h  Definition.h  Destructor.cpp  Environment.cpp  Environment.h  File.cpp  File.h  Include.h  Initialization.cpp  Initialization.h  Main.cpp  Main.h  Monitor.cpp  Monitor.h  Network.cpp  Network.h  PacketData.cpp  PacketData.h  Pcap_DNSProxy.cpp  Pcap_DNSProxy.h  Pcap_DNSProxy.rc  Pcap_DNSProxy.vcxproj  Pcap_DNSProxy.vcxproj.filters  Platform.h  (+36 more)
Source/Pcap_DNSProxy.xcodeproj/: project.pbxproj
Source/Pcap_DNSProxy/Keccak/: CMakeLists.txt  Keccak-compact64.cpp  KeccakSponge.cpp  KeccakSponge.h
Source/Pcap_DNSProxy/WinPcap/: Packet32.h  Win32-Extensions.h  bittypes.h  pcap-bpf.h  pcap-stdinc.h  pcap.h
Source/Pcap_DNSProxy/WinPcap/pcap/: bluetooth.h  bpf.h  pcap.h  sll.h  usb.h
Source/Scripts/: CMake_Build.sh  (+9 more)
(+268 files in other folders)
